--- a/WebContent/html/gracias.html
+++ b/WebContent/html/gracias.html
@@ -6,9 +6,15 @@
 <title>Insert title here</title>
 </head>
 <body>
+<div class=container>
+		<div id="cabecera"  class=row>		
+		<br><br>
+		</div>
+		<img src="http://www.galpenergia.com/resources/img/logo.jpg">
+		<br><br>
+	</div>
 
-
-<h1>Gracias</h1>
+<h1 id="letras">Muchas gracias por repostar en Galp</h1>
 
 
 
